k8s/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: java-sample-k8s
    slot: blue
  name: java-sample-k8s-blue
spec:
  ports:
  - name: 1234-1234
    port: 1234
    protocol: TCP
    targetPort: 1234
  selector:
    app: java-sample-k8s
    slot: blue
  type: ClusterIP
