k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: java-sample-k8s
  name: java-sample-k8s
spec:
  ports:
  - name: 1234-1234
    port: 1234
    protocol: TCP
    targetPort: 1234
  selector:
    app: java-sample-k8s
  type: ClusterIP
