k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-sample-k8s
  labels:
    name: java-sample-k8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: prd.internal.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: java-sample-k8s-blue
            port: 
              number: 1234
  - host: stage.internal.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: java-sample-k8s-green
            port: 
              number: 1234
